test/rewriter/errors/expr_integer_literal_hex.ml
let invalid_integer_literal = [%yojson 0xffffffffffffffffffffffffffffffffffffffffff]
