test/rewriter/errors/expr_integer_literal_hex.expected
File "expr_integer_literal_hex.ml", line 1, characters 39-83:
Error: ppx_yojson: unsupported payload